...
  }
  const created = await Calendar.createCalendar({
    title: 'HuaXia Trips',
    color: '#df4a3a',
    entityType: Calendar.EntityTypes.EVENT,
    name: 'HuaXia Trips',
    ownerAccount: 'HuaXia',
    accessLevel: Calendar.CalendarAccessLevel.OWNER,
    source: {
      name: 'HuaXia',
      type: Calendar.SourceType.LOCAL,
    },
  });
...
